--- a/CSS/common.css
+++ b/CSS/common.css
@@ -1,6 +1,6 @@
 :root{
     --bg-color: #000;
-    --main-brand-color: #e50914;
+    --main-brand-color: #119733;
     --main-brand-color-light: #e44c54;
     --secondary-brand-color: #0e1b4f;
     --main-text-color: #fff;
