--- a/CSS/header.css
+++ b/CSS/header.css
@@ -3,17 +3,26 @@
     top:0;
     z-index: 99;
     background-color: var(--bg-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
     .image{
-        width: 20%;
-        min-width: 120px;
-        max-width: 200px;
+        width: 100%;
+        height: 80px;
+        min-width: 150px;
+        max-width: 350px;
     }
+   
 }
 .nav{
     .list{
+       
         list-style: none;
         padding: 0;
         margin: 0;
+        display: flex;
+        gap:5px ;
     }
 }
 
