--- a/CSS/info.css
+++ b/CSS/info.css
@@ -18,3 +18,11 @@
         }
     }
 }
+@media screen and (width > 768px){
+    .info{
+        display:flex;
+        flex-direction: row-reverse;
+        gap: 2.5rem;
+        align-items: center;
+    }
+}
